move to folder serial

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-/PrimitivePolynomialsModuloTwo/*
+PrimitivePolynomialsModuloTwoUpToDegree27.c
+PrimitivePolynomialsModuloTwoUpToDegree27.h
 points
 *.o
 *.out
