--- a/distributed/Makefile
+++ b/distributed/Makefile
@@ -1,4 +1,4 @@
-a.out: main.cpp type_to_mpi.h PrimitivePolynomialsModuloTwoUpToDegree27.o
+a.out: main.cpp sobol_generator.hpp type_to_mpi.hpp PrimitivePolynomialsModuloTwoUpToDegree27.o
 	mpic++ -std=c++14 -O3 -pedantic -Wall -Wextra -Wcast-align -Wcast-qual -Wctor-dtor-privacy -Wdisabled-optimization -Wformat=2 -Winit-self -Wlogical-op -Wmissing-declarations -Wmissing-include-dirs -Wnoexcept -Wold-style-cast -Woverloaded-virtual -Wredundant-decls -Wshadow -Wsign-promo -Wstrict-null-sentinel -Wstrict-overflow=5 -Wswitch-default -Wundef -Werror -Wno-unused PrimitivePolynomialsModuloTwoUpToDegree27.o main.cpp
 
 PrimitivePolynomialsModuloTwoUpToDegree27.o: PrimitivePolynomialsModuloTwo/PrimitivePolynomialsModuloTwoUpToDegree27.h PrimitivePolynomialsModuloTwo/PrimitivePolynomialsModuloTwoUpToDegree27.c
