read direction integers from file
see files available at http://web.maths.unsw.edu.au/~fkuo/sobol/

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,5 @@
 /integrate
 /generate
-PrimitivePolynomialsModuloTwoUpToDegree27.c
-PrimitivePolynomialsModuloTwoUpToDegree27.h
-points
+/direction_numbers/*
 *.o
 *.out
